# adjudica

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CASE_STUDY.md
docs/findings/: ted-eforms-boundary.md
src/adjudica/: __init__.py  config.py
src/adjudica/evals/: __init__.py  backtest.py  cost.py  extraction.py  run_extraction.py  run_placsp.py
src/adjudica/extract/: __init__.py  extractor.py  schema.py
src/adjudica/ingest/: __init__.py  __main__.py  bulk.py  models.py  normalize.py  resolve.py  run.py  store.py  ted_client.py
src/adjudica/mcp_server/: __init__.py  server.py  tools.py
src/adjudica/placsp/: __init__.py  documents.py  feed.py  ingest.py  models.py  parse.py  store.py
src/adjudica/qualify/: __init__.py  eligibility.py  profile.py
tests/: conftest.py  test_backtest.py  test_bulk.py  test_eligibility.py  test_extraction_eval.py  test_extractor.py  test_mcp_tools.py  test_normalize.py  test_outcome.py  test_placsp_parse.py  test_placsp_pipeline.py  test_resolve.py  test_run_extraction.py  test_smoke.py  test_store.py  test_ted_client.py
tests/fixtures/: placsp_sample.atom  ted_awards_eforms.json  ted_tenders_eforms.json
